// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListRow snapshot (dois temas): claro 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    collapsable={false}
    style={
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 12,
          "minHeight": 56,
          "paddingVertical": 8,
        }
      }
    >
      <View />
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <Text
          maxFontSizeMultiplier={1.3}
          style={
            [
              {
                "fontFamily": "Inter-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              },
              {
                "color": "#111113",
              },
              {},
              null,
            ]
          }
        >
          Mercado
        </Text>
        <Text
          maxFontSizeMultiplier={1.3}
          style={
            [
              {
                "fontFamily": "Inter-Regular",
                "fontSize": 12,
                "lineHeight": 16,
              },
              {
                "color": "#5F5F6A",
              },
              {},
              null,
            ]
          }
        >
          Hoje
        </Text>
      </View>
      <View />
    </View>
  </View>
</View>
`;

exports[`ListRow snapshot (dois temas): escuro 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    collapsable={false}
    style={
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 12,
          "minHeight": 56,
          "paddingVertical": 8,
        }
      }
    >
      <View />
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <Text
          maxFontSizeMultiplier={1.3}
          style={
            [
              {
                "fontFamily": "Inter-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              },
              {
                "color": "#F2F2F3",
              },
              {},
              null,
            ]
          }
        >
          Mercado
        </Text>
        <Text
          maxFontSizeMultiplier={1.3}
          style={
            [
              {
                "fontFamily": "Inter-Regular",
                "fontSize": 12,
                "lineHeight": 16,
              },
              {
                "color": "#9B9BA6",
              },
              {},
              null,
            ]
          }
        >
          Hoje
        </Text>
      </View>
      <View />
    </View>
  </View>
</View>
`;
